--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -98,7 +98,9 @@
     "tab_copied": { "message": "Вкладка скопирована" },
     "tab_cut": { "message": "Вкладка вырезана" },
     "delete_this_group": { "message": "Удалить" },
-    "group_is_now_private": { "message": "Эта группа теперь является закрытой. Не забудьте заблокировать ее." },
+    "group_is_now_private": {
+        "message": "Эта группа теперь является закрытой. Не забудьте заблокировать ее."
+    },
     "rename": { "message": "Переименовать" },
     "additional_options": { "message": "Дополнительные параметры" },
     "enter_group_name": { "message": "Введите имя группы" },
